src/styles/editor.scss
.editor {
  text-align: left;
  height: calc(100% - 46px);
  padding: 10px 15px;
  overflow-wrap: break-word;
  overflow-y: auto;
  outline: none;
  font-family: "Source Code Pro", monospace;
  font-size: 12px;
  line-height: 22px;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  white-space: pre;

  .mobileInput {
    position: absolute;
    top: -2000px;
    left: -2000px;
  }

  .lineText {
    display: inline;
    position: relative;
    top: -1px;
    margin-left: 8px;
  }

  .preWhiteSpace {
    white-space: pre;
  }

  .caret {
    position: relative;
    -webkit-animation: blink 0.75s ease-in-out infinite;
    -moz-animation: blink 0.75s ease-in-out infinite;
    -o-animation: blink 0.75s ease-in-out infinite;
    -ms-animation: blink 0.75s ease-in-out infinite;
    animation: blink 0.75s ease-in-out infinite;

    .caretAfter {
      content: "";
      position: absolute;
      top: 2px;
      width: 5px;
      height: 13px;
      z-index: 10;
    }

    @-moz-keyframes blink {
      0% {
        opacity: 0;
        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
        filter: alpha(opacity=0);
      }
      100% {
        opacity: 1;
        -ms-filter: none;
        filter: none;
      }
    }
    @-webkit-keyframes blink {
      0% {
        opacity: 0;
        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
        filter: alpha(opacity=0);
      }
      100% {
        opacity: 1;
        -ms-filter: none;
        filter: none;
      }
    }
    @-o-keyframes blink {
      0% {
        opacity: 0;
        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
        filter: alpha(opacity=0);
      }
      100% {
        opacity: 1;
        -ms-filter: none;
        filter: none;
      }
    }
    @keyframes blink {
      0% {
        opacity: 0;
        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
        filter: alpha(opacity=0);
      }
      100% {
        opacity: 1;
        -ms-filter: none;
        filter: none;
      }
    }
  }
  &::-webkit-scrollbar {
    display: none;
    width: 0;
  }
  a {
    color: #1a87b5;
  }
}

